Add documentation and license, prepare to publish