@@ -3,14 +3,14 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
 import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
 
 plugins {
+    id 'com.vanniktech.maven.publish' version '0.34.0'
     id 'jacoco-report-aggregation'
-    id 'maven-publish'
-    id 'org.jetbrains.dokka' version '1.9.20'
+    id 'org.jetbrains.dokka' version '2.1.0'
     id 'org.jetbrains.kotlin.jvm' version '2.1.10'
     id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.10' apply false
-    id 'org.jlleitschuh.gradle.ktlint' version '12.2.0'
-    id 'org.sonarqube' version '6.0.1.5171'
-    id 'pl.allegro.tech.build.axion-release' version '1.18.17'
+    id 'org.jlleitschuh.gradle.ktlint' version '13.1.0'
+    id 'org.sonarqube' version '7.0.0.6105'
+    id 'pl.allegro.tech.build.axion-release' version '1.21.0'
 }
 
 repositories {
@@ -42,18 +42,28 @@ tasks.named('jar').configure {
 scmVersion {
     tag {
         prefix = ''
-        initialVersion { t, p -> '1.0.0' }
+        initialVersion { t, p -> '0.1.0' }
     }
     useHighestVersion = true
     ignoreUncommittedChanges = false
     versionIncrementer 'incrementMinor'
+
+    checks {
+        uncommittedChanges = false
+        aheadOfRemote = false
+    }
+}
+
+tasks.withType(PublishToMavenLocal) {
+    onlyIf { project != rootProject }
 }
 
 version = scmVersion.version
+description = 'A reactive library for managing audio files, playlists and waveforms'
 
 sonar {
     properties {
-        property 'sonar.host.url', 'http://sonar.transgressoft.net'
+        property 'sonar.host.url', 'https://sonarcloud.io'
         property 'sonar.organization', 'transgressoft'
         property 'sonar.projectKey', 'net.transgressoft:music-commons'
         property 'sonar.projectName', 'music-commons'
@@ -72,7 +82,6 @@ tasks.named('check') {
 
 allprojects {
     repositories {
-        mavenLocal()
         mavenCentral()
         maven { url = 'https://jitpack.io' }
     }
@@ -80,6 +89,7 @@ allprojects {
 
 subprojects {
 
+    apply plugin: 'com.vanniktech.maven.publish'
     apply plugin: 'jacoco'
     apply plugin: 'kotlin'
     apply plugin: 'maven-publish'
@@ -100,19 +110,20 @@ subprojects {
         implementation 'io.github.microutils:kotlin-logging-jvm:3.0.5'
         implementation 'net.transgressoft:transgressoft-commons-api:1.5.0'
         implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0'
+        implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0'
 
-        testImplementation 'ch.qos.logback:logback-core:1.5.16'
-        testRuntimeOnly 'ch.qos.logback:logback-classic:1.5.16'
+        testImplementation 'ch.qos.logback:logback-core:1.5.19'
+        testRuntimeOnly 'ch.qos.logback:logback-classic:1.5.19'
     }
 
-    java {
-        withSourcesJar()
-        withJavadocJar()
+    afterEvaluate {
+        tasks.named('generateMetadataFileForMavenPublication') {
+            dependsOn tasks.named('dokkaJavadocJar')
+        }
     }
 
-    tasks.named("publish").configure {
-        shouldRunAfter("build", "check")
+    kotlin {
+        jvmToolchain(17)
     }
 
     tasks.withType(KotlinJvmCompile).configureEach {
@@ -122,15 +133,18 @@ subprojects {
         }
     }
 
-    configurations.configureEach {
-        resolutionStrategy {
-            cacheChangingModulesFor 0, 'seconds'
+    tasks.withType(KotlinJvmCompile).configureEach {
+        compilerOptions {
+            jvmTarget.set(JvmTarget.JVM_17)
+            freeCompilerArgs.add('-Xjsr305=strict')
         }
     }
 
     sonar {
         properties {
             property 'sonar.moduleKey', "${project.name}"
+            property 'sonar.sources', 'src/main'
+            property 'sonar.exclusions', 'src/test/**'
         }
     }
 
@@ -142,13 +156,6 @@ subprojects {
 
     test {
         useJUnitPlatform()
-        jvmArgs = [
-                '--add-opens=javafx.base/javafx.beans=ALL-UNNAMED',
-                '--add-opens=javafx.base/javafx.beans.property=ALL-UNNAMED',
-                '--add-opens=javafx.base/javafx.collections=ALL-UNNAMED',
-                '--add-opens=javafx.graphics/javafx.scene.image=ALL-UNNAMED',
-                '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
-        ]
         testLogging {
             events 'passed', 'skipped', 'failed'
         }
@@ -161,39 +168,38 @@ subprojects {
         }
     }
 
-    tasks.named('javadocJar') {
-        dependsOn tasks.named('dokkaJavadoc')
-        from tasks.named('dokkaJavadoc').map { it.outputDirectory }
-    }
+    mavenPublishing {
+        publishToMavenCentral()
+        coordinates("${project.group}", "${project.name}", "${project.version}")
+        pom {
+            name = "${project.name}"
+            description = project.description
+            url = 'https://github.com/octaviospain/music-commons'
+            inceptionYear = '2025'
 
-    publishing {
-        publications {
-            maven(MavenPublication) {
-                from components.java
-                groupId = project.group
-                artifactId = project.name
-                version = project.version
-
-                pom {
-                    name = project.name
-                    description = project.description
-                    url = 'https://github.com/octaviospain/music-commons'
-                    licenses {
-                        license {
-                            name = 'GNU General Public License v3'
-                            url = 'https://www.gnu.org/licenses/gpl-3.0.en.html'
-                        }
-                    }
-
-                    developers {
-                        developer {
-                            id = 'transgressoft'
-                            name = 'Octavio Calleya Garcia'
-                            email = 'octaviospain@gmail.com'
-                        }
-                    }
+            licenses {
+                license {
+                    name = 'GNU General Public License v3'
+                    url = 'https://www.gnu.org/licenses/gpl-3.0.en.html'
                 }
             }
+
+            developers {
+                developer {
+                    id = 'transgressoft'
+                    name = 'Octavio Calleya Garcia'
+                    email = 'octavio@transgressoft.net'
+                    organization = 'transgressoft'
+                    organizationUrl = 'https://transgressoft.net'
+                }
+            }
+
+            scm {
+                connection = 'scm:git:git://github.com/octaviospain/music-commons.git'
+                developerConnection = 'scm:git:ssh://github.com:octaviospain/music-commons.git'
+                url = 'https://github.com/octaviospain/music-commons/tree/master'
+            }
         }
+        signAllPublications()
     }
 }
